<resources>
    <string name="app_name">Travelingo</string>
    <string name="login_with_google">LOGIN WITH GOOGLE</string>
    <string name="logout">LOGOUT</string>
    <string name="app">TODO</string>
    <string name="facebook_app_id">747444005661604</string>
    <string name="fb_login_protocol_scheme">fb747444005661604</string>
    <string name="login_with_facebook">LOGIN WITH FACEBOOK</string>
    <string name="welcome_abo">.welcome\n aboard</string>
    <string name="lets">Let’s get this\n beautiful journey started !</string>
    <string name="by_signing_">
By signing up, you confirm that you have read and \n accepted our Terms &amp; conditions and Privacy Policy.
</string>
    <string name="copyright">© Travelingo. All rights reserved.</string>
    <string name="copyright_two">© Travelingo. All rights reserved.\nApp Version 1.0.0</string>
    <string name="birthday">Birthday:</string>
    <string name="gender">Gender:</string>
    <string name="app_title">Travelingo</string>
    <string name="we_at_travelingo">We at Travelingo, are coming up with a series of articles that will make your stay here at Manipal more memorable.</string>
    <string name="welcome_info">Brace yourself to explore this panaromic town!</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Dolor magna eget est lorem ipsum. Vitae congue mauris rhoncus aenean vel elit scelerisque mauris. Id semper risus in hendrerit. Lectus proin nibh nisl condimentum id venenatis. Non enim praesent elementum facilisis leo vel fringilla est. Ornare massa eget egestas purus viverra accumsan in nisl. Fermentum dui faucibus in ornare quam viverra orci sagittis. Auctor urna nunc id cursus metus aliquam eleifend mi. At erat pellentesque adipiscing commodo elit. Blandit turpis cursus in hac habitasse. Sit amet nisl purus in mollis nunc sed id semper. Eu sem integer vitae justo eget magna fermentum. Et netus et malesuada fames ac turpis egestas maecenas. Pellentesque dignissim enim sit amet. Nibh mauris cursus mattis molestie a iaculis. At elementum eu facilisis sed odio morbi quis.</string>
</resources>
