<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_bg">


        <ProgressBar
            android:id="@+id/progress_circular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <View
            android:id="@+id/rectangle_4"
            android:layout_width="350dp"
            android:layout_height="550dp"
            android:layout_marginTop="100dp"

            android:background="@drawable/ic_opaqueholder"
            android:foregroundGravity="center"
            app:layout_constraintBottom_toTopOf="@id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread_inside" />


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/roboto"
            android:gravity="center_vertical"
            android:text="@string/welcome_abo"
            android:textAppearance="@style/welcome_abo"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="@+id/rectangle_4"
            app:layout_constraintStart_toStartOf="@+id/rectangle_4"
            app:layout_constraintTop_toTopOf="@+id/rectangle_4"
            app:layout_constraintVertical_chainStyle="spread" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/lets"
            android:textAppearance="@style/lets"
            app:layout_constraintBottom_toTopOf="@+id/login_google_btn"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView"></TextView>

        <Button
            android:id="@+id/login_google_btn"
            android:layout_width="220dp"
            android:layout_height="45dp"
            android:layout_marginTop="35dp"
            android:backgroundTint="#FFF"
            android:fontFamily="@font/roboto"
            android:text="@string/login_with_google"
            android:textColor="#000"
            android:textSize="11sp"
            app:icon="@drawable/ic_google_logo"
            app:iconTint="@android:color/transparent"
            app:iconTintMode="add"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="14dp"
            android:layout_height="21dp"
            android:layout_marginTop="16dp"
            android:text="or"
            app:layout_constraintBottom_toTopOf="@+id/login_fb_btn"
            app:layout_constraintEnd_toEndOf="@+id/login_google_btn"
            app:layout_constraintStart_toStartOf="@+id/login_google_btn"
            app:layout_constraintTop_toBottomOf="@+id/login_google_btn" />

        <Button
            android:id="@+id/login_fb_btn"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="220dp"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="#1877F2"
            android:fontFamily="@font/roboto"
            android:text="@string/login_with_facebook"
            android:textColor="#FFF"
            android:textSize="12sp"
            app:icon="@drawable/ic_facebook_logo"
            app:iconTint="@android:color/transparent"
            app:iconTintMode="add"
            app:layout_constraintBottom_toTopOf="@+id/textView5"
            app:layout_constraintEnd_toEndOf="@+id/login_google_btn"
            app:layout_constraintStart_toStartOf="@+id/login_google_btn"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/roboto"
            android:gravity="top"
            android:text="@string/by_signing_"
            android:textAppearance="@style/by_signing_"
            app:layout_constraintBottom_toBottomOf="@+id/rectangle_4"
            app:layout_constraintEnd_toEndOf="@+id/login_fb_btn"
            app:layout_constraintStart_toStartOf="@+id/login_fb_btn"
            app:layout_constraintTop_toBottomOf="@+id/login_fb_btn" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toTopOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="@+id/rectangle_4"
            app:layout_constraintStart_toStartOf="@+id/rectangle_4"
            app:layout_constraintTop_toBottomOf="@+id/rectangle_4" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/copyright"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/rectangle_4"
            app:layout_constraintStart_toStartOf="@+id/rectangle_4"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <FrameLayout
            android:id="@+id/progressBarHolder"
            android:layout_width="9dp"
            android:layout_height="9dp"
            android:alpha="0.4"
            android:animateLayoutChanges="true"
            android:background="#000000"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ProgressBar
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminate="true" />
        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>