<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_bg"
        tools:context=".EnterDetails">

        <View
            android:id="@+id/rectangle_4"
            android:layout_width="330dp"
            android:layout_height="560dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/ic_opaqueholder"
            android:foregroundGravity="center"
            app:layout_constraintBottom_toTopOf="@id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread_inside" />

        <TextView
            android:id="@+id/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="Please enter \n the details"
            android:textColor="#6C63FF"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@id/date"
            app:layout_constraintEnd_toEndOf="@+id/rectangle_4"
            app:layout_constraintStart_toStartOf="@+id/rectangle_4"
            app:layout_constraintTop_toTopOf="@+id/rectangle_4"
            app:layout_constraintVertical_chainStyle="packed" />


        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/roboto"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/birthday"
            android:textColor="#6C63FF"
            android:textSize="28sp"
            app:layout_constraintBottom_toTopOf="@id/calender"
            app:layout_constraintEnd_toEndOf="@+id/rectangle_4"
            app:layout_constraintStart_toStartOf="@+id/rectangle_4"
            app:layout_constraintTop_toBottomOf="@+id/Title" />
        <!-- Date Picker -->

        <TextView
            android:id="@+id/calender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/roboto_light"
            android:gravity="center_horizontal|center_vertical"
            android:text="12/10/2000"
            android:textColor="#6C63FF"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@id/gender"
            app:layout_constraintEnd_toEndOf="@+id/date"
            app:layout_constraintStart_toStartOf="@+id/date"
            app:layout_constraintTop_toBottomOf="@+id/date" />

        <!-- Gender -->
        <TextView
            android:id="@+id/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/roboto"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/gender"
            android:textColor="#6C63FF"
            android:textSize="28sp"
            app:layout_constraintBottom_toTopOf="@id/radioGroup"
            app:layout_constraintEnd_toEndOf="@+id/calender"
            app:layout_constraintStart_toStartOf="@+id/calender"
            app:layout_constraintTop_toBottomOf="@+id/calender" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@id/enterdets"
            app:layout_constraintEnd_toEndOf="@+id/gender"
            app:layout_constraintStart_toStartOf="@+id/gender"
            app:layout_constraintTop_toBottomOf="@+id/gender">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="#6C63FF"
                android:fontFamily="@font/roboto_light"
                android:gravity="center_horizontal|center_vertical"
                android:onClick="getGender"
                android:padding="10dp"
                android:text="Female"
                android:textColor="#6C63FF"
                android:textSize="20sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="#6C63FF"
                android:fontFamily="@font/roboto_light"
                android:gravity="center_horizontal|center_vertical"
                android:onClick="getGender"
                android:padding="10dp"
                android:text="Male"
                android:textColor="#6C63FF"
                android:textSize="20sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="#6C63FF"
                android:fontFamily="@font/roboto_light"
                android:gravity="center_horizontal|center_vertical"
                android:onClick="getGender"
                android:padding="10dp"
                android:text="Other"
                android:textColor="#6C63FF"
                android:textSize="20sp" />
        </RadioGroup>

        <!-- copyrights -->

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="45dp"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toTopOf="@id/textView4"
            app:layout_constraintEnd_toEndOf="@+id/rectangle_4"
            app:layout_constraintStart_toStartOf="@+id/rectangle_4"
            app:layout_constraintTop_toBottomOf="@+id/rectangle_4" />

        <Button
            android:id="@+id/enterdets"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/button_bg"
            android:fontFamily="@font/roboto_bold"
            android:onClick="enterDetails"
            android:text="Enter"
            android:textColor="#FFF"
            app:layout_constraintBottom_toBottomOf="@id/rectangle_4"
            app:layout_constraintEnd_toEndOf="@+id/radioGroup"
            app:layout_constraintStart_toStartOf="@+id/radioGroup"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_light"
            android:text="@string/copyright"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>